// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ar huge 1`] = `
<style>
.IS1 {
  margin-bottom: 10px;
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 22;
  line-height: 22px;
}

.IS4 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS5 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS5"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
          >
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ar medium 1`] = `
<style>
.IS1 {
  margin-bottom: 10px;
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS5 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS5"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
          >
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ar wide 1`] = `
<style>
.IS1 {
  margin-bottom: 10px;
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS5 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS5"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
          >
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ar without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  margin-bottom: 10px;
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS5 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS6"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS5"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
          >
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;
